Backported to 1.8